# rust-workshop

./: Cargo.toml
grepper/: Cargo.toml
src/: main.rs  manipulator.rs  read_file.rs  scan.rs
wordcount/: Cargo.toml  README.md  load_wiki.py
wordcount/src/: counter.rs  main.rs  parse.rs
