[package]
name = "rust-workshop"
version = "0.1.0"
authors = ["Albrecht <14820950+weichweich@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
log = "0.4"
structopt = "0.3"
stderrlog = "0.4"
colored = "1.9"
